<resources>
    <string name="app_name">شركة السلام</string>
    <string name="password">كلمة السر</string>
    <string name="login">تسجيل الدخول</string>
    <string name="google_maps_key">AIzaSyCCbFJiVGcuKK8syU2ib1iWySwrX2sl2A4</string>
    <string name="req_loc_perm">السماح بالوصول للموقع</string>
    <string name="req_loc_perm_message">يرجى السماح بالوصول للموقع للتمكن من فتح الخريطة</string>
    <string name="req_uid_perm">السماح بالوصول للمعرف</string>
    <string name="req_uid_perm_message">يرجى السماح بالوصول للمعرف الخاص بالجهاز للتمكن من تسجيل الدخول</string>
    <string name="req_record_and_read_write_perm">السماح بالتسجيل</string>
    <string name="req_record_and_read_write_perm_message">يرجى السماح بالتسجيل و الوصول للذاكرة للتمكن من تسجيل الصوت</string>
    <string name="req_loc_perm_pos_btn">الموافقة</string>
    <string name="loading">جارى التحميل</string>
    <string name="loading_msg">برجاء الانتظار حتى يتم التحميل</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="sure_logout">هل تريد بالفعل تسجيل الخروج؟</string>
    <string name="username">اسم المستخدم</string>
    <string name="err_username">يرجى ادخال اسم المستخدم</string>
    <string name="err_password">يرجى ادخال كلمة المرور</string>
    <string name="not_recorded">لم يتم التسجيل</string>
    <string name="sure_make_record">هل تريد إرسال هذا التسجيل ؟</string>
    <string name="period">المدة: </string>
    <string name="location">الموقع: </string>
    <string name="sure_make_record_title">إرسال التسجيل</string>
    <string name="hold_record_button">إضغط على زر التسجيل مطولاً ليتم التسجيل</string>
    <string name="swipe_to_cancel">قم بالسحب لإلغاء التسجيل</string>
    <string name="sel_mark">النقطة المحددة للتسجيل</string>
    <string name="no_selected_point">لا يوجد نقطة محددة!</string>
    <string name="please_press_back_again">إضغط على زر الرجوع مرة أخرى للخروج من التطبيق</string>
    <string name="second">ثانية</string>
    <string name="succ_upload_record">تم رفع الملف الصوتى بنجاح</string>
    <string name="error_upload_record">خطأ أثناء رفع الملف الصوتى</string>
    <string name="uploading_record">جارى رفع الملف الصوتى</string>
    <string name="not_recorder_no_selected_point">لم يتم التسجيل لعدم وجود نقطة محددة</string>
    <string name="write_here">اكتب هنا</string>
    <string name="send_record">ارسال ملف صوتى</string>
    <string name="dialog_ok_button">تمام</string>
    <string name="succ">تمت بنجاح</string>
    <string name="error">خطأ</string>
    <string name="record">تسجيل</string>
    <string name="my_records">تسجيلاتى</string>
    <string name="check_int_con">يرجى التأكد من إتصال بالإنترنت</string>
    <string name="add_car">إضافة بيانات العربة</string>
    <string name="vichel_num">رقم السيارة</string>
    <string name="vichel_type">نوع السيارة</string>
    <string name="send_car_data">إرسال بيانات السيارة</string>
    <string name="notes">ملاحظات</string>
    <string name="err_loading">حدث خطأ أثناء التحميل</string>
    <string name="enter">أدخل</string>
    <string name="err_insert">خطأ أثناء الإضافة</string>
    <string name="added_before_msg">تمت الإضافة لهذه النقطة من قبل</string>
    <string name="succ_add_master">تم إضافة بيانات النقطة بنجاح</string>
    <string name="username_pass_err">اسم المستخدم أو كلمة المرور غير صحيحة</string>
    <string name="sure_car_data_msg">هل أنت متأكد من بيانات السيارة التى سيتم إضافتها ؟</string>
    <string name="sure">تأكيد</string>
    <string name="added_record_before">تم إضافة هذا التسجيل من قبل</string>
    <string name="district">الحى</string>
    <string name="status">الحالة</string>
    <string name="region">المنطقة</string>
    <string name="date_edit">تاريخ التعديل</string>
    <string name="date_create">تاريخ التسجيل</string>
    <string name="no_records">لا يوجد تسجيلات</string>
    <string name="share_voice">مشاركة الملف الصوتى</string>
    <string name="sure_delete_master">هل تريد بالفعل حذف بيانات العربة والتسجيلات ؟</string>
    <string name="sure_delete_record">هل تريد بالفعل حذف التسجيل ؟</string>
    <string name="delete">حذف</string>
    <string name="confirm">تــأكــيــد</string>
    <string name="confirm_with_chnge">تأكيد مع تغيير الموقع</string>
    <string name="car_kind">موديل السيارة : </string>
    <string name="car_color">لون السيارة : </string>
    <string name="bank">البنك : </string>
    <string name="maker">الشركة المصنعة : </string>
    <string name="cust_name">اسم العميل</string>
    <string name="cont_num">رقم العقد</string>
    <string name="shas_num">رقم الشاسيه</string>
    <string name="fail_load_cars">لا يمكن تحميل السيارات</string>
    <string name="no_cars">لا يوجد سيارات</string>
    <string name="confir_car_succ">تم بنجاح</string>
    <string name="sure_conf_this_car">هل تريد بالفعل التأكيد والإرسال لهذه السيارة ؟</string>
    <string name="fail_confirm">فشل فى التأكيد , حاول مرة أخرى</string>
    <string name="user_records">تسجيلات المستخدم</string>
    <string name="listen_records">سماع التسجيلات</string>
    <string name="no_car">لا يوجد سيارة</string>
    <string name="sure_no_car">هل تريد بالفعل الإبلاغ عن عدم وجود هذه السيارة ؟</string>
    <string name="longitude">خط الطول</string>
    <string name="latitude">دائرة العرض</string>
    <string name="load_records_msg">برجاء الإنتظار حتى يتم تحميل التسجيلات …</string>
    <string name="load_regions_msg">برجاء الإنتظار حتى يتم تحميل المناطق …</string>
    <string name="added_car_before_msg">تمت اضافة هذه السيارة من قبل</string>
    <string name="show_records">عرض التسجيلات</string>
    <string name="fail_load_daily_cars">فشل فى تحميل السيارات المسجلة اليوم</string>
    <string name="no_daily_cars">لا يوجد سيارات مسجلة اليوم</string>
    <string name="add_rec_to_master_fail_msg">فشل فى إضافة التسجيل للنقطة المحددة</string>
    <string name="add_master_loading_msg">جارى إضافة بيانات النقطة</string>
    <string name="add_master_fail_msg">فشل فى إضافة بيانات النقطة</string>
    <string name="add_rec_to_master_succ_msg">تم إضافة بيانات النقطة والتسجيل بنجاح</string>
    <string name="choose_point_firstly">يجب اختيار نقطة للتسجيل أولاُ</string>
    <string name="choose_region_message">لا يمكن ارسال تسجيل قبل إختيار المنطقة</string>
    <string name="choose_region">--اختر المنطقة--</string>
    <string name="choose_car_type">--اختر نوع السيارة--</string>
    <string name="cut_upload_record_warn_msg">برجاء عدم ترك الصفحة لعدم توقف التحميل</string>
    <string name="enable_gps_msg">يجب تفعيل الموقع للتمكن من الوصول للموقع الحالى</string>
    <string name="enable_gps">تفعيل الموقع</string>
    <string name="enable">تفعيل</string>
    <string name="detecting_your_loc_msg">برجاء الإنتظار جارى تحديد موقعك</string>
    <string name="record_not_upload_msg">لم يتم رفع التسجيل الصوتى … أعد المحاولة</string>
    <string name="send">إرسال</string>
    <string name="rec_his_list">أرشيف التسجيلات</string>
    <string name="history">الأرشيف</string>
    <string name="err_load_rec">خطأ فى تحميل التسجيل الصوتى</string>
    <string name="err_load_rec_his">حدث خطأ أثناء تحميل أرشيف التسجيلات</string>
    <string name="no_record_history">لا يوجد تسجيلات صوتية فى أرشيف التسجيلات</string>
    <string name="loading_rec_his">جارى تحميل أرشيف التسجيلات</string>
    <string name="company">الشركة</string>
    <string name="sure_lis_to_all_rec">هل تم الاستماع لكل التسجيلات ؟</string>
    <string name="del_master_lis">فى حالة التأكيد سيتم حذف النقطة والتسجيلات</string>
    <string name="suc_delete_rec">تم حذف التسجيل الصوتى</string>
    <string name="fail_delete_rec">فشل فى حذف التسجيل الصوتى</string>
    <string name="fail_delete_rec_arch">فشل فى حذف التسجيل الصوتى من الأرشيف</string>
    <string name="sure_del_rec">هل تريد بالفعل حذف التسجيل الصوتى ؟</string>
    <string name="fail_del">فشل فى المسح</string>
    <string name="del_all_arch_prog">جارى مسح كل الأرشيف</string>
    <string name="succ_del_all_arch_prog">تم مسح كل الأرشيف</string>
    <string name="fail_del_all_arch_prog">فشل مسح كل الأرشيف</string>
    <string name="no_data_to_remove">لا يوجد بيانات للمسح !</string>
    <string name="sure_del_all_arch">هل أنت متأكد من مسح كل الأرشبف ؟</string>
    <string name="load_rec_list_btn">تحميل تسجيلات النقطة</string>
    <string name="choose_rec_way">اختيار طريقة التسجيل</string>
    <string name="choose_rec_eay_msg">يرجى الإختيار بين الرفع من التطبيق أو التسجيل من الجوال
ملحوظة : الأفضل هو التسجيل من الجوال</string>
    <string name="open_fl_exp">التسجيل من الجوال</string>
    <string name="rec_from_app">التسجيل من التطبيق</string>
    <string name="clear">مسح</string>
    <string name="search">بحث</string>


</resources>