<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/vichelNumber_edt"
            android:layout_width="0dp"
            android:layout_weight=".3"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/white_solid_prim_stroke"
            android:hint="@string/vichel_num"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/gray"
            android:layout_marginBottom="20dp"
            style="@style/Regular_Primary_Color_TextView_style"
            android:layout_marginTop="10dp"
            android:textSize="16.5sp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/vichelType_edt"
            android:layout_width="0dp"
            android:layout_weight=".3"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/white_solid_prim_stroke"
            android:hint="@string/vichel_type"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/gray"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/cairo_regular"
            android:textSize="16.5sp"/>

        <com.flod.loadingbutton.LoadingButton
            android:id="@+id/loadingBtn"
            android:layout_width="0dp"
            android:layout_weight=".3"
            android:layout_height="50dp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/prim_solid"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            style="@style/Bold_White_Color_TextView_style"
            app:endSuccessDrawable="@drawable/ic_successful"
            app:endFailDrawable="@drawable/ic_fail"
            app:radius="50dp"
            app:enableShrink="true"
            app:enableRestore="true"
            app:shrinkShape="Oval"
            app:loadingDrawablePosition="Start" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
