<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_500">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:src="@drawable/ic_baseline_arrow_back_white_24"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true" />

            <ImageView
                android:id="@+id/standard_toolbar_recorded_cars_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_directions_car_24"
                android:layout_margin="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/standard_toolbar_title_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Bold_White_Color_TextView_style"
                android:layout_centerInParent="true"
                android:textSize="20sp"
                android:text="@string/show_records"/>

        </RelativeLayout>

        <include
            android:id="@+id/records_recycler"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_10sdp"
            layout="@layout/recycler"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/main_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_solid_prim_stroke"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_margin="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_car_red"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_car"
                    android:textColor="@color/purple_500"
                    android:textSize="24sp"
                    android:fontFamily="@font/cairo_regular"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginBottom="8dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/latLng_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="15sp"

                    style="@style/Regular_Primary_Color_TextView_style" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/vichelNumber_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="28dp"
                    android:layout_marginRight="28dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/vichel_num"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/gray"
                    android:layout_marginBottom="20dp"
                    style="@style/Regular_Primary_Color_TextView_style"
                    android:layout_marginTop="10dp"
                    android:textSize="16.5sp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/vichelType_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="28dp"
                    android:layout_marginRight="28dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/vichel_type"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/gray"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/cairo_regular"
                    android:textSize="16.5sp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/vichel_address_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="28dp"
                    android:layout_marginRight="28dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/address"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/gray"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/cairo_regular"
                    android:textSize="16.5sp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/vichel_district_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="28dp"
                    android:layout_marginRight="28dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/district"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/gray"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/cairo_regular"
                    android:textSize="16.5sp"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/regions_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="28dp"
                    android:layout_marginRight="28dp"
                    android:background="@drawable/edit_text_background"
                    android:padding="10dp"
                    android:layout_marginBottom="20dp"
                    style="@style/Regular_Primary_Color_TextView_style"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/vichel_notes_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="28dp"
                    android:layout_marginRight="28dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/notes"
                    android:minLines="5"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/gray"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/cairo_regular"
                    android:textSize="16.sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/send_data"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:text="@string/send_car_data"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    style="@style/Bold_White_Color_TextView_style"
                    android:background="@drawable/first_button_background"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
